* Redesign pricepage page w/all material elements * Fix issues with misreporting of update history * Fix issues w responsive layout on small devices * Add history graph of SYS/USD over time * Add pagination for history using material components

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,3 +1,7 @@
 .disclaimer {
-    font-size: 12px !important;
+  font-size: 12px !important;
+}
+
+.table-row {
+  white-space: nowrap;
 }
